# TrtMatrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
Shared/include/common/: buffers.h  common.h  logger.h
Shared/src/common/: logger.cpp
TrtExecutor/: AudioUtils.cpp  AudioUtils.h  CMakeLists.txt  TrtExecutor.cpp  TrtExecutor.h  main.cpp
TrtTransformer/: CMakeLists.txt  TrtTransformer.cpp  TrtTransformer.h  main.cpp
